--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -4,21 +4,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Codebase - Bootstrap 5 Admin Template &amp; UI Framework |
-            DEMO</title>
-        <meta name="description"
-            content="Codebase - Bootstrap 5 Admin Template &amp; UI Framework created by pixelcave | This is the demo of Codebase! You need to purchase a license for legal use! | DEMO">
-        <meta name="author" content="pixelcave">
-        <meta name="robots" content="index, follow">
-        <meta property="og:title" content="Codebase - Bootstrap 5 Admin Template &amp; UI Framework | DEMO">
-        <meta property="og:site_name" content="Codebase">
-        <meta property="og:description" content="Codebase - Bootstrap 5 Admin Template &amp; UI Framework created by pixelcave | This is the demo of Codebase! You need to purchase a license for legal use! | DEMO">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content>
-        <meta property="og:image" content>
-        <link rel="shortcut icon" href="assets/media/favicons/favicon.png">
-        <link rel="icon" type="image/png" sizes="192x192" href="assets/media/favicons/favicon-192x192.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/media/favicons/apple-touch-icon-180x180.png">
+        <title>DIBAX_TAX_LLC | ADMIN</title>
+        
+        <!-- Favicon and touch Icons -->
+        <link href="{% static 'img/logo3.1.JPG' %}" rel="shortcut icon" type="image/png">        
+        
+        
         <link rel="stylesheet" id="css-main" href="{% static 'admin/css/codebase.min-5.8.css' %} ">
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-9HQDQJJYW7"></script>
         <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-9HQDQJJYW7');</script>
