--- a/templates/cliente/verificacion.html
+++ b/templates/cliente/verificacion.html
@@ -96,7 +96,7 @@
                                     </form>                                    
                                     <p class="fs-sm text-muted py-4 mb-0">
                                         Haven't received it? 
-                                        <a href="../../../../../../../../dibax_admin/verificacion/{{email}}/">
+                                        <a href="../../../../../../../../dibax_admin/verificacion/{{email_c}}/">
                                             Resend a new code
                                         </a>
                                     </p>
