--- a/templates/cliente/forget_pass_email.html
+++ b/templates/cliente/forget_pass_email.html
@@ -73,7 +73,8 @@
                                             Reset Password
                                         </button>
                                         <div class="mt-4">
-                                            <a class="fs-sm fw-medium link-fx text-muted me-2 mb-1 d-inline-block" href="../../../../../../../../../../../../../../dibax_admin/">
+                                            <a class="fs-sm fw-medium link-fx text-muted me-2 mb-1 d-inline-block" 
+                                                href="../../../../../../../../../../../../../../">
                                                 <i class="fa fa-arrow-left opacity-50 me-1"></i>
                                                 Volver
                                             </a>
