--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -643,8 +643,9 @@
                 <script>
                     document.addEventListener('DOMContentLoaded', function() {
                         // Cambia estas coordenadas a las que desees
-                        var latitud = 40.7128; // Ejemplo: Nueva York
-                        var longitud = -74.0060; // Ejemplo: Nueva York
+                        var latitud = 38.4231940; // Ejemplo: Nueva York
+                        var longitud = -86.9437940; // Ejemplo: Nueva York
+                        
             
                         var map = L.map('map').setView([latitud, longitud], 12);
                         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
