--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -583,7 +583,7 @@
                                                         <div class="card-header text-center" style="font-family: 'Arial', sans-serif; font-size: 1.5rem;">
                                                             OBTENCIÓN DE EIN
                                                         </div>
-                                                        <img src="{% static 'img/servicios/OBTENCIÓN DE EIN.WEBP' %}" class="card-img-top img-fluid" style="width: 100%; height: 200px;" alt="FORMACION DE COMPAÑIAS">
+                                                        <img src="{% static 'img/servicios/OBTENCIÓN DE EIN.webp' %}" class="card-img-top img-fluid" style="width: 100%; height: 200px;" alt="FORMACION DE COMPAÑIAS">
                                                     </div>
                                                 </div><!-- End Card Item -->                                      
                                                 <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
