--- a/templates/client/verificacion.html
+++ b/templates/client/verificacion.html
@@ -102,7 +102,7 @@
                                     </form>                                    
                                     <p class="fs-sm text-muted py-4 mb-0">
                                         Haven't received it? 
-                                        <a href="../../../../../../../../dibax_admin/forgot_pass/{{email_c}}/">
+                                        <a href="../../../../../../../../verificacion/{{email_c}}/">
                                             Resend a new code
                                         </a>
                                     </p>
