--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -14,6 +14,7 @@
         <meta property="og:description" content="En DIBAZ TAX LLC, nos dedicamos a proporcionar soluciones integrales y personalizadas en trámites de inmigración e impuestos para nuestros clientes en los Estados Unidos. Con años de experiencia y un equipo de profesionales altamente capacitados, nos enorgullecemos de ofrecer un servicio confiable, eficiente y accesible.">
         <meta property="og:url" content="https://www.dibaztaxllc.com/">
         <meta name="robots" content="index, follow">
+        <meta name="google-site-verification" content="8U6zftUAeX5jq1TCGD5upWipvWESF4DssFfbOkwvSvg" />
         <!-- Favicons -->
         <link href="{% static 'img/logo00.jfif' %}" rel="icon" type="image/x-icon">
 
