--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -671,6 +671,26 @@
                 </section><!-- /Features Section -->
             {% endif %}
 
+            <section id="enlaces" class="contact section">
+                <div class="container section-title" data-aos="fade-up">
+                    <h2>Enlaces Importantes</h2>
+                    <p class="text-danger">Estos enlaces son externos a nuestro sitio</p>
+                </div><!-- End Section Title -->
+                <div class="container">
+                    <div class="mt-5">
+                        <ul>
+                            <li class="d-flex mt-3">
+                                <p class="fw-semibold fs-5">Formulario de María Elvira Salazar</p>
+                                <a href="https://repsalazari220a.fillout.com/t/xt8k6c75Gtus" 
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Toca aquí para ir
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
             
             <section id="location" class="contact section">
                 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
