--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -677,12 +677,12 @@
                     <p class="text-danger">Estos enlaces son externos a nuestro sitio</p>
                 </div><!-- End Section Title -->
                 <div class="container">
-                    <div class="mt-5">
+                    <div>
                         <ul>
                             <li class="d-flex mt-3">
-                                <p class="fw-semibold fs-5">Formulario de María Elvira Salazar</p>
+                                <p class="fw-semibold fs-5 mx-3">Formulario de María Elvira Salazar</p>
                                 <a href="https://repsalazari220a.fillout.com/t/xt8k6c75Gtus" 
-                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto mx-3">
                                     Toca aquí para ir
                                 </a>
                             </li>
