--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -682,7 +682,8 @@
                             <li class="d-flex mt-3">
                                 <p class="fw-semibold fs-5 mx-3">Formulario de María Elvira Salazar</p>
                                 <a href="https://repsalazari220a.fillout.com/t/xt8k6c75Gtus" 
-                                    class="btn-get-started animate__animated animate__fadeInUp scrollto mx-3">
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto mx-3"
+                                    target="_self">
                                     Toca aquí para ir
                                 </a>
                             </li>
