--- a/templates/client/index.html
+++ b/templates/client/index.html
@@ -159,9 +159,17 @@
                                 en los Estados Unidos. Con años de experiencia y un equipo de profesionales altamente 
                                 capacitados, nos enorgullecemos de ofrecer un servicio confiable, eficiente y accesible.
                             </p>
-                            <a href="#about"
-                                class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
-                                More</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="#about"
+                                class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Read More
+                                </a>
+                            {% else %}
+                                <a href="../../../../../../../../../../../login/"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Sign in
+                                </a>
+                            {% endif %}                            
                         </div>
                     </div>
                     
@@ -176,9 +184,17 @@
                                 Durante las citas, te orientamos sobre cómo completar los formularios 
                                 de inmigración necesarios para tus trámites.
                             </p>
-                            <a href="#about"
-                                class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
-                                More</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="#about"
+                                class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Read More
+                                </a>
+                            {% else %}
+                                <a href="../../../../../../../../../../../login/"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Sign in
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
 
@@ -194,9 +210,17 @@
                                 para navegar estos procedimientos con confianza y tranquilidad. 
                                 Nos esforzamos por ser un aliado confiable en cada paso del camino.
                             </p>
-                            <a href="#about"
-                                class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
-                                More</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="#about"
+                                class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Read More
+                                </a>
+                            {% else %}
+                                <a href="../../../../../../../../../../../login/"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Sign in
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
 
@@ -213,9 +237,17 @@
                                 mejor asesoramiento posible. Nuestro enfoque personalizado garantiza 
                                 que cada cliente reciba la atención y el apoyo que merece.
                             </p>
-                            <a href="#about"
-                                class="btn-get-started animate__animated animate__fadeInUp scrollto">Read
-                                More</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="#about"
+                                class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Read More
+                                </a>
+                            {% else %}
+                                <a href="../../../../../../../../../../../login/"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">
+                                    Sign in
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
 
